# conf_curve_likelihood

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTINUITY.md  CONTRIBUTING.md  Makefile  README.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml
docs/: AI_ASSISTED_CODING.md  CODEX_WORKFLOW.md  DATA_MANAGEMENT.md  DECISIONS.md  PRINCIPLES.md  TYPE_SM_DESIGN_ANALYSIS.md
scripts/: stage_web_python.py
src/confcurve/: __init__.py  core.py  design.py  models.py  stage.py  web_contract.py
tests/: test_core.py  test_design_metrics.py  test_foundation.py  test_properties.py
tests/e2e/: conftest.py  helpers.py  test_app.py  test_design_calibration.py  test_display_range.py  test_exports_and_sidebar.py  test_initial_and_inputs.py  test_plot_views.py
tests/integration/: test_contract_and_stage.py  test_contract_response.py  test_design_contract.py
web/: index.html
web/assets/: app.js  config.js  formatters.js  plot-helpers.js  plot.js  renderers.js  runtime.js  styles.css
web/assets/py/confcurve/: __init__.py  core.py  models.py  stage.py  web_contract.py
